--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,19 @@
-<!DOCTYPE web-app PUBLIC
-        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
+<!--documentation: https://docs.oracle.com/cd/E24329_01/web.1211/e21049/web_xml.htm#CIHFAIDA-->
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         id="WebApp_ID" version="3.0">
 
 <!--    <error-page>-->
 <!--        <error-code>404</error-code>-->
 <!--        <location>/index.jsp</location>-->
 <!--    </error-page>-->
 
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>static/jsp/jspTest.jsp</welcome-file>
+    </welcome-file-list>
 <!--    <display-name>Quick Servlet Demo Application</display-name>-->
 
 <!--    <servlet>-->
